// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Avatar /> > Autoplay > renders a animated avatar 1`] = `
<span
  class="account__avatar account__avatar--loading"
  style="width: 100px; height: 100px;"
>
  <img
    alt=""
    src="/animated/alice.gif"
  />
</span>
`;

exports[`<Avatar /> > Still > renders a still avatar 1`] = `
<span
  class="account__avatar account__avatar--loading"
  style="width: 100px; height: 100px;"
>
  <img
    alt=""
    src="/static/alice.jpg"
  />
</span>
`;
